# atlaslens

./: .dockerignore  .env.example  .gitignore  README.md
.github/workflows/: cd-backend.yml  cd-frontend.yml  cd-infra.yml  ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  analyzer_agent.py  coach_agent.py  critic_agent.py  kernel_factory.py  reporter_agent.py  simulator_agent.py  summary_critic.py
backend/app/api/: admin.py  auth.py  chat.py  daily_pulse.py  goals.py  health.py  insight_actions.py  me.py  members.py  one_on_ones.py  simulator.py
backend/app/core/: audit.py  audit_middleware.py  auth.py  azure_clients.py  cache.py  config.py  cosmos_client.py  foundry_agents.py  foundry_client.py  tracing.py
backend/app/models/: schemas.py
backend/app/services/: admin_dashboard.py  agent_memory.py  agent_tools.py  artefact_store.py  chat.py  chat_history.py  cosmos_repo.py  daily_pulse.py  daily_report_store.py  data_loader.py  goal_alignment.py  goal_store.py  insight_actions.py  member_view.py  one_on_one_companion.py  one_on_one_store.py  org_impact.py  org_repo.py  prep_notes_store.py  prompt_flow_runner.py  seed_migration.py  skill_growth.py  team_health.py
backend/scripts/: reseed_cosmos.py  seed_atlascorp.py  seed_credentials.py
backend/tests/: test_smoke.py
data/atlascorp/: auth_map.yaml  credentials.yaml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEMO_VIDEO.md  RUNBOOK.md  SUBMISSION_CHECKLIST.md  ZENN_ARTICLE.md  ZENN_ARTICLE_DEV.md  architecture.drawio  wording_review.md
frontend/: .env.production  Dockerfile  index.html  nginx.conf.template  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
infra/: deploy_backend.sh  deploy_frontend.sh  main.bicep  provision_cosmos.sh  provision_foundry.sh  provision_openai.sh
(+155 files in other folders)
