[project]
name = "atlaslens-backend"
version = "0.1.0"
description = "AtlasLens backend — Team Co-pilot platform powered by Semantic Kernel on Azure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "semantic-kernel>=1.16.0",
    "openai>=1.54.0",
    "azure-identity>=1.19.0",
    "azure-ai-agents>=1.2.0b6",
    "azure-ai-projects>=1.0.0",
    "azure-core-tracing-opentelemetry>=1.0.0b13",
    "azure-search-documents>=11.5.2",
    "azure-cosmos>=4.7.0",
    "tiktoken>=0.8.0",
    "pyyaml>=6.0.2",
    "python-dateutil>=2.9.0",
    "httpx>=0.27.0",
    "rich>=13.9.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "promptflow>=1.18.0",
    "promptflow-tools>=1.6.0",
    "keyrings.alt>=5.0.0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b30",
    "opentelemetry-api==1.38.0",
    "opentelemetry-sdk==1.38.0",
    "opentelemetry-instrumentation-fastapi<0.60",
    "opentelemetry-instrumentation-httpx<0.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
# B008: FastAPI's Depends() pattern is the recommended style despite the warning.
# E501: long lines covered by formatter.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
